--- a/app/src/main/res/layout/activity_jlogin.xml
+++ b/app/src/main/res/layout/activity_jlogin.xml
@@ -64,7 +64,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="ADD"
-            android:onClick="@{()->jbtj.JAddcount()}"
+            android:onClick="@{()->jbtj.JAddEdit()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/guideline"
             app:layout_constraintHorizontal_bias="0.511"
@@ -90,24 +90,11 @@
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
             android:text="Reomve"
-            android:onClick="@{()->jbtj.JRomovecount()}"
+            android:onClick="@{()->jbtj.JRemoveEdit()}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.511"
             app:layout_constraintStart_toStartOf="@+id/guideline" />
-
-        <!--<Button-->
-            <!--android:id="@+id/button2"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:layout_marginStart="8dp"-->
-            <!--android:layout_marginEnd="8dp"-->
-            <!--android:layout_marginBottom="8dp"-->
-            <!--android:text="Reomve"-->
-            <!--app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--app:layout_constraintEnd_toEndOf="parent"-->
-            <!--app:layout_constraintHorizontal_bias="0.511"-->
-            <!--app:layout_constraintStart_toStartOf="@+id/guideline" />-->
 
         <android.support.constraint.Guideline
             android:id="@+id/guideline"
@@ -122,6 +109,20 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             app:layout_constraintGuide_begin="255dp" />
+
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="196dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="33dp"
+            android:layout_marginEnd="8dp"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@={juserj.edit}"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
